tests/baselines/reference/mismatchedGenericArguments1.errors.txt
tests/cases/compiler/mismatchedGenericArguments1.ts(5,4): error TS2416: Property 'foo' in type 'C<T>' is not assignable to the same property in base type 'IFoo<T>'.
  Type '(x: string) => number' is not assignable to type '<T>(x: T) => T'.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'T' is not assignable to type 'string'.
tests/cases/compiler/mismatchedGenericArguments1.ts(11,4): error TS2416: Property 'foo' in type 'C2<T>' is not assignable to the same property in base type 'IFoo<T>'.
  Type '<U>(x: string) => number' is not assignable to type '<T>(x: T) => T'.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'T' is not assignable to type 'string'.


==== tests/cases/compiler/mismatchedGenericArguments1.ts (2 errors) ====
    interface IFoo<T> {
       foo<T>(x: T): T;
    }
    class C<T> implements IFoo<T> {
       foo(x: string): number {
       ~~~
!!! error TS2416: Property 'foo' in type 'C<T>' is not assignable to the same property in base type 'IFoo<T>'.
!!! error TS2416:   Type '(x: string) => number' is not assignable to type '<T>(x: T) => T'.
!!! error TS2416:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2416:       Type 'T' is not assignable to type 'string'.
         return null;
       }
    }
    
    class C2<T> implements IFoo<T> {
       foo<U>(x: string): number {
       ~~~
!!! error TS2416: Property 'foo' in type 'C2<T>' is not assignable to the same property in base type 'IFoo<T>'.
!!! error TS2416:   Type '<U>(x: string) => number' is not assignable to type '<T>(x: T) => T'.
!!! error TS2416:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2416:       Type 'T' is not assignable to type 'string'.
         return null;
       }
    }
    